Fix .header-navbar being pushed out of site header
Due to padding being too big and it hitting .logo-container forcing it
down to another line before it collapses.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,10 @@ input {
     padding: 10px 20px;
 }
 
+.header-navbar {
+    padding-left: 0;
+}
+
 #header-navbar-collapse{
     float: right;
 }
